--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  grid-area: nav-bar;
+  background-color: #45291b;
+  color: #F9F2C5;
+  padding: 10px;
+}
+
+.logo {
+  width: 38px;
+  height: 40px;
+}
+
+.brand-name {
+  font-size: 16px;
+}
+
+.checkout {
+  grid-area: checkout-section;
+}
+
+.checkout-total-info {
+  grid-area: total-info;
+}
+
+main {
+  grid-area: body;
+  grid-template-areas:
+  "checkout-section"
+  "total-info";
+}
+
+.grid-container {
+  grid-template-areas:
+  "nav-bar nav-bar"
+  "body body";
+}
