Add layout for the cards

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  background-color: #EFEFEF;
+  margin: 0;
+  height: 100dvh;
 }
 
 nav {
@@ -17,6 +20,11 @@ nav {
   padding: 10px;
 }
 
+main {
+  grid-area: body;
+  padding: 25px;
+}
+
 .logo {
   width: 38px;
   height: 40px;
@@ -26,19 +34,18 @@ nav {
   font-size: 16px;
 }
 
+.card {
+  background-color: #EBE1D6;
+  border-radius: 3px;
+  box-shadow: 0 2px 15px 1px rgb(0, 0, 0, 0.15);
+  padding: 0 15px 0 15px;
+  width: 600px;
+}
+
 .checkout {
-  grid-area: checkout-section;
-}
-
-.checkout-total-info {
-  grid-area: total-info;
-}
-
-main {
-  grid-area: body;
-  grid-template-areas:
-  "checkout-section"
-  "total-info";
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
 
 .grid-container {
